# machnet

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  CPPLINT.cfg  Dockerfile  Doxyfile  INTERNAL.md  Makefile  README.md  README_WIN.md  SECURITY.md  SUPPORT.md  amazon-linux-2023.dockerfile  azure-pipelines.yml  build_shim.sh  create_azure_vm.sh  docker-bake.hcl  machnet.sh  machnet_setup.sh  machnet_win.sh  ninja_build_errors  nsaas.sh
.github/: codeql-config.yml
.github/workflows/: build.yml  build_base.yml  codeql.yml
azure_cli/: azure_vm.py  requirements.txt
bindings/csharp/HelloWorld/: Program.cs  machnet_shim.cs
bindings/go/machnet/: conversion.h  machnet.go
bindings/go/msg_gen/: go.mod  go.sum  main.go
bindings/js/: .gitignore  hello_world.js  latency.js  machnet_shim.js  rocksdb_client.js
bindings/rust/: .gitignore  Cargo.toml  README.md  TODO.md  build.rs  wrapper.h
bindings/rust/resources/: jring.h  jring_elem_private.h  machnet.h
bindings/rust/src/: bindings.rs  lib.rs  main.rs
csharp/: .gitignore
csharp/HelloWorld/: HelloWorld.csproj  Program.cs  machnet_shim.cs  nsaas_shim.cs
docker/: Dockerfile  dockerbuild.sh
dockerfiles/: amazon-linux-2023.dockerfile  get_targets_for_arch.py  ubuntu-22.04.dockerfile
docs/: BENCHMARKS.md  INTERNAL.md  PERFORMANCE_REPORT.md  TCP_EXPERIMENT_README.md
docs/tests/: TCP_FLOW_TESTS_README.md
examples/: CMakeLists.txt  Makefile  aws_create_vms.py  aws_instructions.md  azure_create_vms.py  azure_start_machnet.sh  azure_vm.py  hello_world.cc  sync.sh
examples/rust/: .gitignore  Cargo.toml  README.md
examples/rust/src/: main.rs
go/: servers.json
go/machnet/: conversion.h  go.mod  machnet.go
go/msg_gen/: README.md  go.mod  go.sum  main.go
go/nsaas/: conversion.h  go.mod
go/raft/: application.go  go.mod  go.sum  machnet_tranport.go  main.go  server.go  store.go  transport_api.go
go/raft/cmd/: client.go
go/raft_tcp/: Makefile  README.md  fsm.go  go.mod  go.sum  main.go  servers.json  store.go
go/raft_tcp/cmd/: client.go
js/: .gitignore  benchmark.js  hello_world.js  latency.js  machnet_shim.js  nsaas_shim.js  rocksdb_client.js
src/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/cc_perf/: CMakeLists.txt  README.md  main.cc
src/apps/echo/: CMakeLists.txt  config_json_reader.h  main.cc
src/apps/faster/: CMakeLists.txt  README.md  faster_client.cc  faster_server.cc  faster_tcp.cc  faster_tcp_client.cc  faster_tcp_epoll.cc  faster_udp_client.cc  run_experiment.sh
src/apps/hello_world/: CMakeLists.txt  main.cc
src/apps/jring2_bench/: CMakeLists.txt  main.cc
src/apps/jring2_perf/: CMakeLists.txt  main.cc
src/apps/jring_bench/: CMakeLists.txt  main.cc
src/apps/jring_perf/: CMakeLists.txt  main.cc
src/apps/l2fwd/: CMakeLists.txt  main.cc
src/apps/machnet/: CMakeLists.txt  README.md  config.json  main.cc
src/apps/mongoose/: CMakeLists.txt  main.cc  mongoose.cc  mongoose.h
src/apps/msg_gen/: CMakeLists.txt  README.md  config_json_reader.h  main.cc  run.sh
src/apps/msg_gen_tcp/: CMakeLists.txt  main.cc
src/apps/nsaas/: CMakeLists.txt  README.md  main.cc
src/apps/ping/: CMakeLists.txt  README.md  main.cc
src/apps/pktgen/: CMakeLists.txt  README.md  config_json_reader.h  main.cc  servers.json
src/apps/rocksdb_server/: CMakeLists.txt  rocksdb_server.cc
src/apps/tcp_msg_gen/: CMakeLists.txt  main.cc
src/benchmark/: CMakeLists.txt
src/core/: CMakeLists.txt  buffer_ring_test.cc  channel_bench.cc  flow_test.cc  machnet_config.cc  machnet_controller.cc  machnet_engine_test.cc  nsaas_config.cc  nsaas_engine_test.cc  tcp_flow_test.cc  ttime.cc  ud_socket.cc  utils.cc
src/core/drivers/dpdk/: dpdk.cc  dpdk_test.cc  packet_pool.cc  pmd.cc
src/core/drivers/shm/: channel.cc  channel_bench.cc  channel_test.cc  shmem.cc  shmem_test.cc
src/core/net/: ether.cc  ipv4.cc  tcp.cc  udp.cc
src/ext/: CMakeLists.txt  CPPLINT.cfg  Makefile  jring.h  jring2.h  jring2_test.cc  jring_bench.cc  jring_elem_private.h  machnet.c  machnet.cc  machnet.h  machnet_bench.cc  machnet_common.h  machnet_ctrl.h  machnet_export.h  machnet_private.h  machnet_private_test.cc  machnet_test.cc  nsaas.c  nsaas_ctrl.h  nsaas_private.h
src/ext/windows/: cross_platform.h  utils_helper.h  windows_uio.h  windows_uuid.h
src/ext/windows/utils_helper/: arch.h  utils_helper.h
src/ext/windows/winclock/: clock.c  pthread_types.h  winclock.h
src/include/: arp.h  asprintf.h  buffer_ring.h  cc.h  channel.h  channel_msgbuf.h  common.h  dpdk.h  ether.h  flow.h  flow_key.h  icmp.h  ipv4.h  juggler_rpc_ctrl.h  machnet_config.h  machnet_controller.h  machnet_engine.h  machnet_pkthdr.h  nsaas_config.h  nsaas_engine.h  packet.h  packet_pool.h  pause.h  pmd.h  shmem.h  tcp.h  tcp_flow.h  ttime.h  types.h  ud_socket.h  udp.h  utils.h  worker.h
src/tests/: CMakeLists.txt
src/tests/benchmark/: CMakeLists.txt
src/tools/: CMakeLists.txt
src/tools/jring2_perf/: CMakeLists.txt
src/tools/ping/: README.md  main.cc
src/tools/pktgen/: README.md  main.cc
tools/: do.sh  rsync-exclude.txt  rsync.sh
