[package]
name = "machnet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.69.4"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
env_logger = "0.11.2"
lazy_static = "1.4.0"
log = "0.4.20"
signal-hook = "0.3.17"
