[package]
name = "msg_gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version =  "4.5.1", features = ["derive"]}
env_logger = "0.11.2"
hdrhistogram = "7.5.4"
lazy_static = "1.4.0"
log = "0.4.20"
machnet = "0.1.8"
signal-hook = "0.3.17"
